--- a/css/styles.css
+++ b/css/styles.css
@@ -1335,6 +1335,8 @@ outline: 2px solid var(--button-hover);
 
         .container{
             width: 1158px;
+            padding-left: 15px;
+            padding-right: 15px;
             
         } 
 
