--- a/css/styles.css
+++ b/css/styles.css
@@ -720,11 +720,11 @@ outline: 2px solid var(--button-hover);
     z-index: 150;
 
     transition: opacity var(--transform);
-    
+    overflow-y: scroll ;
     
 }
 .mobile-menu-container{
-    height: 100vh;
+   
    
     padding-top: 80px;
     padding-left: 40px;
@@ -752,9 +752,7 @@ outline: 2px solid var(--button-hover);
     margin-bottom: 40px;
 }
 
-.mobile-address{
-    margin-top: 284px;
-}
+
 
 .address-item{
     margin-bottom: 40px;
@@ -766,7 +764,7 @@ outline: 2px solid var(--button-hover);
     line-height: 1.1;
     letter-spacing: 0.02em;
 
-    color: var(--bcg-color);
+    color: var(--accent-color);
 }
 .mobile-fone-link:hover,
 .mobile-fone-link:focus {
@@ -781,7 +779,7 @@ outline: 2px solid var(--button-hover);
     line-height: 1.2;
     letter-spacing: 0.02em;
 
-    color: var(--bcg-color);
+    color: var(--content-color);
 }
 .mobile-email-link:hover,
 .mobile-email-link:focus {
@@ -793,7 +791,7 @@ outline: 2px solid var(--button-hover);
 .soc-list-mobile {
     display: flex;
     justify-content: center;
-    gap:16%;
+    gap: 13%;
 }
 
         .mobile-menu-open {
@@ -816,7 +814,7 @@ outline: 2px solid var(--button-hover);
         }
         .main-title{
             max-width: 320px;
-            margin-bottom: 88px;
+            margin-bottom: 72px;
         }
 
         .main-section{
@@ -1039,7 +1037,10 @@ outline: 2px solid var(--button-hover);
                 margin-bottom: 72px ;
             }
 
-            
+            .studio {
+            color: #4d5ae5;
+        }
+    
             
 }
 
@@ -1299,8 +1300,6 @@ outline: 2px solid var(--button-hover);
         }
 
         .logo-soc-position{
-            align-items: center;
-            justify-content: center;
             gap: 24px;
             margin-bottom: 72px;
          }
@@ -1309,14 +1308,14 @@ outline: 2px solid var(--button-hover);
             gap: 24px;
          }
 
-         .form-position{
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                justify-content: center;
-                align-content: center;
-                flex-wrap: wrap;
-            }
+         .footer-center{
+            display: flex; 
+            flex-wrap: wrap;  
+            row-gap: 24px;
+            column-gap: 72px;
+        }
+         
+            
 
 }
 
@@ -1365,8 +1364,8 @@ outline: 2px solid var(--button-hover);
             margin-bottom: 48px;
         }
         .main-section{
-
-            max-width: 100%;
+            
+            max-width: 1440px;
             height: 600px;
             margin-right: auto;
             margin-left: auto;
