--- a/css/styles.css
+++ b/css/styles.css
@@ -332,10 +332,6 @@ right: 24px;
     transition: background-color var(--transform);
 }
 .modal-close{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     transition: fill var(--transform);
 }
 
@@ -452,7 +448,7 @@ margin-top: 8px;
 .privacy-link{
     
     font-size: 12px;
-    line-height: calc(16/12) ;
+    line-height: 0.75 ;
     letter-spacing: 0.04em;
 
     color: var(--accent-color);
@@ -501,7 +497,7 @@ margin-top: 8px;
 
  
     font-size: 12px;
-    line-height: calc(16/12);
+    line-height: 14px;
     letter-spacing: 0.04em;
 
     color: var(--border-color);
@@ -729,8 +725,6 @@ outline: 2px solid var(--button-hover);
         padding-bottom: 40px;
     
 }
-
-
 
 .mobile-top{
     margin-top: 40px;
@@ -1262,13 +1256,7 @@ text-align: center;
 
  }
 
- .customers-list {
-
-     row-gap: 72px;
-     column-gap: 24px;
-
-     flex-basis: calc((100%-24px*1)/6);
- }
+ 
 .team-list{
   flex-wrap: wrap;}
   .descript-list{
@@ -1279,6 +1267,14 @@ text-align: center;
     .site-nav {
     margin-left: 120px;
     }
+
+    .customers-list {
+
+     row-gap: 72px;
+     column-gap: 24px;
+
+     flex-basis: calc((100%-24px*1)/6);
+ }
         /* section hero */
 
     .main-title{
@@ -1334,13 +1330,6 @@ text-align: center;
             row-gap: 24px;
             column-gap: 72px;
         }
-
-        .container-footer {
-        margin: 0 auto;
-        width: 552px;
-        padding-left: 16px;
-        padding-right: 16px;
-        }
          
             
 
@@ -1358,16 +1347,22 @@ text-align: center;
 /* style desktop */
 
 @media screen and (min-width:1158px) {
+
+    .customers-list {
+    
+            row-gap: 72px;
+            column-gap: 24px;
+    
+            flex-basis: calc((100%-24px*1)/6);}
+            
     .discription-img {
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
             line-height: 1.5;
             letter-spacing: 0.02em;
-            }
-        .customers-list{
-            column-gap: 24px;
-        }
+            margin-bottom: 8px;}
+
 
     .content-title {
             font-weight: 500;
