--- a/css/styles.css
+++ b/css/styles.css
@@ -1325,6 +1325,9 @@ text-align: center;
          }
 
          .footer-center{
+            width: 552px;
+            margin-left: auto;
+            margin-right: auto;
             display: flex; 
             flex-wrap: wrap;  
             row-gap: 24px;
